# IMDb-Search-Comparison

./: .gitignore  CMakeLists.txt  README.md
include/: DatasetLoader.h  Movie.h  MovieHashTable.h  RedBlackTree.h
src/: DatasetLoader.cpp  MovieHashTable.cpp  RedBlackTree.cpp  main.cpp
